--- a/website/src/components/BaseHead.astro
+++ b/website/src/components/BaseHead.astro
@@ -1,5 +1,12 @@
 ---
-const { title } = Astro.props;
+interface Props {
+  title: string;
+  description?: string;
+}
+
+const { title, description = 'Self-hosted MTG collection management' } = Astro.props;
 ---
 
 <title>{title} | ShowMyCards</title>
+<meta name='description' content={description} />
+<meta name='generator' content={Astro.generator} />
